Algorithm - add rule: required

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             class="form__input"
             id="name"
             name="name"
+            aria-label="name"
+            rules="required"
             type="text"
             placeholder="Enter your name"
           />
@@ -36,6 +38,8 @@
             class="form__input"
             id="email"
             name="email"
+            aria-label="email"
+            rules="required"
             type="text"
             placeholder="Enter your email"
           />
@@ -49,6 +53,8 @@
             class="form__input"
             id="password"
             name="password"
+            aria-label="password"
+            rules="required"
             type="password"
             placeholder="Enter your password"
           />
@@ -64,6 +70,8 @@
             class="form__input"
             id="password-confirmation"
             name="password-confirmation"
+            aria-label="password confirmation"
+            rules="required"
             type="password"
             placeholder="Confirm your password"
           />
