Algorithm - add rule: email

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             id="email"
             name="email"
             aria-label="email"
-            rules="required"
+            rules="required|email"
             type="text"
             placeholder="Enter your email"
           />
