Algorithm - add rule: minLength

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             id="password"
             name="password"
             aria-label="password"
-            rules="required"
+            rules="required|minLength:8"
             type="password"
             placeholder="Enter your password"
           />
