Algorithm - add rule: confirmed

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             id="password"
             name="password"
             aria-label="password"
+            confirmation-code="password"
             rules="required|minLength:8"
             type="password"
             placeholder="Enter your password"
@@ -71,7 +72,8 @@
             id="password-confirmation"
             name="password-confirmation"
             aria-label="password confirmation"
-            rules="required"
+            confirmation-code="password"
+            rules="required|confirmed:password"
             type="password"
             placeholder="Confirm your password"
           />
